// Vitest Snapshot v1

exports[`Process heading > code-h1 1`] = `
{
  "frontMatter": {},
  "headings": [
    {
      "depth": 1,
      "id": "codegenyml",
      "value": "codegen.yml",
    },
  ],
  "result": "/*@jsxRuntime automatic @jsxImportSource react*/
import {useMDXComponents as _provideComponents} from \\"nextra/mdx\\";
function _createMdxContent(props) {
  const _components = Object.assign({
    h1: \\"h1\\",
    code: \\"code\\"
  }, _provideComponents(), props.components);
  return <_components.h1><_components.code>{\\"codegen.yml\\"}</_components.code></_components.h1>;
}
function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = Object.assign({}, _provideComponents(), props.components);
  return MDXLayout ? <MDXLayout {...props}><_createMdxContent {...props} /></MDXLayout> : _createMdxContent(props);
}
export default MDXContent;
",
  "searchIndexKey": null,
  "structurizedData": {},
  "title": "codegen.yml",
}
`;

exports[`Process heading > code-with-text-h1 1`] = `
{
  "frontMatter": {},
  "headings": [
    {
      "depth": 1,
      "id": "codegenyml-file",
      "value": "codegen.yml file",
    },
  ],
  "result": "/*@jsxRuntime automatic @jsxImportSource react*/
import {useMDXComponents as _provideComponents} from \\"nextra/mdx\\";
function _createMdxContent(props) {
  const _components = Object.assign({
    h1: \\"h1\\",
    code: \\"code\\"
  }, _provideComponents(), props.components);
  return <_components.h1><_components.code>{\\"codegen.yml\\"}</_components.code>{\\" file\\"}</_components.h1>;
}
function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = Object.assign({}, _provideComponents(), props.components);
  return MDXLayout ? <MDXLayout {...props}><_createMdxContent {...props} /></MDXLayout> : _createMdxContent(props);
}
export default MDXContent;
",
  "searchIndexKey": null,
  "structurizedData": {},
  "title": "codegen.yml file",
}
`;

exports[`Process heading > dynamic-h1 1`] = `
{
  "frontMatter": {},
  "hasJsxInH1": true,
  "headings": [
    {
      "depth": 1,
      "id": "posts-tagged-with-",
      "value": "Posts Tagged with “”",
    },
  ],
  "result": "/*@jsxRuntime automatic @jsxImportSource react*/
import {useMDXComponents as _provideComponents} from \\"nextra/mdx\\";
import {useRouter} from 'next/router';
export const TagName = () => {
  const {tag} = useRouter().query;
  return tag || null;
};
function _createMdxContent(props) {
  const _components = Object.assign({
    h1: \\"h1\\"
  }, _provideComponents(), props.components);
  return <_components.h1>{\\"Posts Tagged with “\\"}<TagName />{\\"”\\"}</_components.h1>;
}
function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = Object.assign({}, _provideComponents(), props.components);
  return MDXLayout ? <MDXLayout {...props}><_createMdxContent {...props} /></MDXLayout> : _createMdxContent(props);
}
export default MDXContent;
",
  "searchIndexKey": null,
  "structurizedData": {},
  "title": "Posts Tagged with “”",
}
`;

exports[`Process heading > no-h1 1`] = `
{
  "frontMatter": {},
  "headings": [
    {
      "depth": 2,
      "id": "h2",
      "value": "H2",
    },
  ],
  "result": "/*@jsxRuntime automatic @jsxImportSource react*/
import {useMDXComponents as _provideComponents} from \\"nextra/mdx\\";
function _createMdxContent(props) {
  const _components = Object.assign({
    h2: \\"h2\\"
  }, _provideComponents(), props.components);
  return <_components.h2 id=\\"h2\\">{\\"H2\\"}</_components.h2>;
}
function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = Object.assign({}, _provideComponents(), props.components);
  return MDXLayout ? <MDXLayout {...props}><_createMdxContent {...props} /></MDXLayout> : _createMdxContent(props);
}
export default MDXContent;
",
  "searchIndexKey": null,
  "structurizedData": {},
}
`;

exports[`Process heading > static-h1 1`] = `
{
  "frontMatter": {},
  "headings": [
    {
      "depth": 1,
      "id": "hello-world",
      "value": "Hello World",
    },
  ],
  "result": "/*@jsxRuntime automatic @jsxImportSource react*/
import {useMDXComponents as _provideComponents} from \\"nextra/mdx\\";
function _createMdxContent(props) {
  const _components = Object.assign({
    h1: \\"h1\\"
  }, _provideComponents(), props.components);
  return <_components.h1>{\\"Hello World\\"}</_components.h1>;
}
function MDXContent(props = {}) {
  const {wrapper: MDXLayout} = Object.assign({}, _provideComponents(), props.components);
  return MDXLayout ? <MDXLayout {...props}><_createMdxContent {...props} /></MDXLayout> : _createMdxContent(props);
}
export default MDXContent;
",
  "searchIndexKey": null,
  "structurizedData": {},
  "title": "Hello World",
}
`;
